--- a/lighthr/pages/dashboard/dashboard2.html
+++ b/lighthr/pages/dashboard/dashboard2.html
@@ -246,6 +246,27 @@
                         <i data-feather="monitor"></i>
                         <span>Dashboard</span></a>
                     </li>
+
+                    <li>
+                        <a href="#" onClick="return false;" class="menu-toggle">
+                            <i data-feather="clipboard"></i>
+                            <span>Profile</span>
+                        </a>
+                        <ul class="ml-menu">
+                            <li class="active">
+                                <a href="../examples/profile.html">My Profile</a>
+                            </li>
+                            <li>
+                                <a href="#">Add Dependants</a>
+                            </li>
+                            <li>
+                                <a href="#">Modify Dependants</a>
+                            </li>
+                            <!-- <li>
+                                <a href="#">Leave Types</a>
+                            </li> -->
+                        </ul>
+                    </li>
                     <li>
                         <a href="#" onClick="return false;" class="menu-toggle">
                             <i data-feather="clipboard"></i>
@@ -259,11 +280,11 @@
                                 <a href="#">New Leave Request</a>
                             </li>
                             <li>
-                                <a href="#">Edit Leave Request</a>
+                                <a href="#">Cancel Leave Request</a>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <a href="#">Leave Types</a>
-                            </li>
+                            </li> -->
                         </ul>
                     </li>
                     <li>
@@ -282,10 +303,23 @@
                     </li>
                     
                     <li>
-                        <a href="../projects/all-projects.html">
-                            <i data-feather="briefcase"></i>
+                        <a href="#" onClick="return false;" class="menu-toggle">
+                            <i data-feather="book-open"></i>
                             <span>Service Request</span>
                         </a>
+                       
+                        <ul class="ml-menu">
+                            <li>
+                                <a href="">All Service Request</a>
+                            </li>
+                            <li class="">
+                                <a href="">Apply new Service Request</a>
+                            </li>
+                            <li class="">
+                                <a href="">Cancel Service Request</a>
+                            </li>
+                        </ul>
+
                     </li>
                    <!--  <li>
                         <a href="#" onClick="return false;" class="menu-toggle">
@@ -707,7 +741,7 @@
                         </ul>
                     </li> -->
 
-                    <li>
+                    <!-- <li>
                         <a href="#" onClick="return false;" class="menu-toggle">
                             <i data-feather="user-check"></i>
                             <span>Authentication</span>
@@ -725,7 +759,7 @@
                             <li>
                                 <a href="../examples/forgot-password.html">Forgot Password</a>
                             </li>
-                           <!--  <li>
+                           <li>
                                 <a href="../examples/locked.html">Locked</a>
                             </li>
                             <li>
@@ -733,9 +767,9 @@
                             </li>
                             <li>
                                 <a href="../examples/500.html">500 - Server Error</a>
-                            </li> -->
+                            </li> 
                         </ul>
-                    </li>
+                    </li> -->
                   <!--   <li>
                         <a href="#" onClick="return false;" class="menu-toggle">
                             <i data-feather="anchor"></i>
