--- a/lighthr/pages/leave/all-leave.html
+++ b/lighthr/pages/leave/all-leave.html
@@ -12,6 +12,8 @@
     <!-- Plugins Core Css -->
     <link href="../../assets/css/common.min.css" rel="stylesheet">
     <link href="../../assets/css/bundles/dataTables.bootstrap4.min.css" rel="stylesheet">
+    <link href="../../assets/css/bundles/owl.theme.default.min.css" rel="stylesheet">
+    <link href="../../assets/css/bundles/owl.carousel.min.css" rel="stylesheet">
     <!-- Custom Css -->
     <link href="../../assets/css/style.css" rel="stylesheet" />
     <!-- You can choose a theme from css/styles instead of get all themes -->
@@ -236,7 +238,7 @@
                             <div class="profile-usertitle-job ">Manager </div>
                         </div>
                     </li>
-                    <li class="header">-- Main</li>
+                    <li class="header"> Main</li>
                     <li class="">
                     <a href="../dashboard/dashboard2.html">
                         <i data-feather="monitor"></i>
@@ -518,6 +520,85 @@
                             </ul>
                         </div>
                         <div class="body">
+
+                            <div class="row state-overview">
+                                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                                    <div class="info-box5 animate-bar bg-b-purple">
+                                        <div class="knob-icon">
+                                            <input type="text" class="dial" value="45" data-width="80" data-height="80"
+                                                data-fgColor="#67de69">
+                                        </div>
+                                        <div class="info-box-content">
+                                            <span class="info-box-text">Sick Leave</span>
+                                            <div class="progress m-t-20">
+                                                <div class="progress-bar l-bg-green shadow-style width-per-45" role="progressbar"
+                                                    aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
+                                            </div>
+                                           
+                                        </div>
+                                        <!-- /.info-box-content -->
+                                    </div>
+                                </div>
+                                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                                    <div class="info-box5 animate-bar bg-b-purple">
+                                        <div class="knob-icon">
+                                            <input type="text" class="dial" value="69" data-width="80" data-height="80"
+                                                data-fgColor="#f98050">
+                                        </div>
+                                        <div class="info-box-content">
+                                            <span class="info-box-text">Clients</span>
+                                            <div class="progress m-t-20">
+                                                <div class="progress-bar l-bg-orange shadow-style width-per-45" role="progressbar"
+                                                    aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
+                                            </div>
+                                            <span class="progress-description">
+                                                <small>26% Increase in 28 Days</small>
+                                            </span>
+                                        </div>
+                                        <!-- /.info-box-content -->
+                                    </div>
+                                </div>
+                                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                                    <div class="info-box5 animate-bar bg-b-purple">
+                                        <div class="knob-icon">
+                                            <input type="text" class="dial" value="84" data-width="80" data-height="80"
+                                                data-fgColor="#8FD8FE">
+                                        </div>
+                                        <div class="info-box-content">
+                                            <span class="info-box-text p-b-10">Employee</span>
+                                            <div class="progress m-t-20">
+                                                <div class="progress-bar l-bg-cyan shadow-style width-per-45" role="progressbar"
+                                                    aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
+                                            </div>
+                                            <span class="progress-description">
+                                                <small>14% Increase in 28 Days</small>
+                                            </span>
+                                        </div>
+                                        <!-- /.info-box-content -->
+                                    </div>
+                                </div>
+                                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                                    <div class="info-box5 animate-bar bg-b-purple">
+                                        <div class="knob-icon">
+                                            <input type="text" class="dial" value="56" data-width="80" data-height="80"
+                                                data-fgColor="#ac8bde">
+                                        </div>
+                                        <div class="info-box-content">
+                                            <span class="info-box-text">Task</span>
+                                            <div class="progress m-t-20">
+                                                <div class="progress-bar l-bg-purple shadow-style width-per-45" role="progressbar"
+                                                    aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
+                                            </div>
+                                            <span class="progress-description">
+                                                <small>50% Increase in 28 Days</small>
+                                            </span>
+                                        </div>
+                                        <!-- /.info-box-content -->
+                                    </div>
+                                </div>
+                            </div>
+
+
                             <div class="table-responsive">
                                 <table class="table table-hover js-basic-example contact_list">
                                     <thead>
