--- a/lighthr/pages/examples/login-register.html
+++ b/lighthr/pages/examples/login-register.html
@@ -326,14 +326,14 @@ a.ghost{
 					<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
 				</div> -->
 				<span>or use your email for registration</span>
-				<input type="text" placeholder="Employee ID" value="CODIC2" class="mt-5" />
-				<input type="text" placeholder="DOB" value="01/01/1990" />
+				<input type="text" placeholder="Employee ID" value="Employee ID" class="mt-5" />
+				<input type="text" placeholder="DOB" value="DOB" />
 				<select class="form-control">
 					<option>Male</option>
 					<option>Female</option>
 					<option>TransGender</option>
 				</select>
-				<input type="text" placeholder="Passport ID or Emirates ID" value="PASSPORTXX" />
+				<input type="text" placeholder="Passport ID or Emirates ID" value="Passport ID or Emirates ID" />
 				<a href="../dashboard/dashboard2.html" class="ghost mt-4">Sign Up</a>
 			</form>
 		</div>
@@ -342,8 +342,8 @@ a.ghost{
 				<img src="../../assets/images/logo.png" alt="" class="login-logo" />
 				<h1>Existing User</h1>
 				<span>Please fill in the details to login</span>
-				<input type="text" placeholder="Employee ID" value="CODIC1" class="mt-5" />
-				<input type="text" placeholder="DOB" value="01/01/1990" />
+				<input type="text" placeholder="Employee ID" value="Employee ID" class="mt-5" />
+				<input type="text" placeholder="DOB" value="DOB" />
 				<a href="#">Forgot your password?</a>
 				<a href="../dashboard/dashboard2.html" class="ghost">Sign In</a>
 			</form>
