apply leave button added

--- a/lighthr/pages/leave/all-leave.html
+++ b/lighthr/pages/leave/all-leave.html
@@ -27,6 +27,16 @@
 td.center {
   text-align: left;
 }
+.ghost.btn-info {
+    position: absolute;
+right: 230px;
+top: 8px;
+line-height: 25px;
+height: auto;
+background-color: #3a71c7 !important;
+box-shadow: none;
+z-index: 9;
+}
 </style>
 
 <body>
@@ -610,8 +620,9 @@ td.center {
             </div>
             <!-- #END# Rounded Corners -->
 
-            <div class="col-12 mb-0">
+            <div class="col-12 mb-0 pos-rel">
                 <div class="card mb-0">
+                    <a href="add-leave.html" class="ghost btn btn-info">Apply Leave</a>
                 <div class="table-responsive body">
                     <table class="table table-hover js-basic-example contact_list">
                         <thead>
